--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,10 @@
   /* System Colors */
   --background: var(--light);
   --foreground: var(--dark);
+  
+  /* Timeline colors */
+  --primary-color: var(--primary);
+  --accent-color: var(--accent);
 }
 
 @theme {
